--- a/app/src/main/res/layout/item_vertical_list.xml
+++ b/app/src/main/res/layout/item_vertical_list.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="data"
-            type="com.kitsunime.domain.model.animelist.Data" />
+            type="com.kitsunime.data.remote.model.Data" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
