--- a/app/src/main/res/drawable/shadow_bottom.xml
+++ b/app/src/main/res/drawable/shadow_bottom.xml
@@ -3,8 +3,8 @@
 
     <gradient
         android:angle="90"
-        android:startColor="#80000000"
         android:endColor="@android:color/transparent"
-        android:gradientRadius="10dp"/>
+        android:gradientRadius="10dp"
+        android:startColor="#80000000" />
 
 </shape>
