--- a/app/src/main/res/layout/item_trending_placeholder.xml
+++ b/app/src/main/res/layout/item_trending_placeholder.xml
@@ -16,7 +16,7 @@
             android:layout_height="25dp"
             android:layout_margin="8dp"
             android:scaleType="fitXY"
-            android:src="@color/black"
+            android:src="@color/shimmer_grey"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,7 +29,7 @@
             android:layout_height="250dp"
             android:layout_margin="8dp"
             android:scaleType="fitXY"
-            android:src="@color/black"
+            android:src="@color/shimmer_grey"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/shOne"
             app:riv_corner_radius="16dp" />
@@ -40,7 +40,7 @@
             android:layout_height="250dp"
             android:layout_margin="8dp"
             android:scaleType="fitXY"
-            android:src="@color/black"
+            android:src="@color/shimmer_grey"
             app:layout_constraintBottom_toBottomOf="@+id/shTwo"
             app:layout_constraintStart_toEndOf="@+id/shTwo"
             app:layout_constraintTop_toTopOf="@+id/shTwo"
