--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,61 @@
     <color name="shimmer_dark_grey">#433F3F</color>
 
     <color name="transparent">#80000000</color>
+
+    <!-- Theme Color -->
+    <color name="md_theme_light_primary">#A82485</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#FFD8EC</color>
+    <color name="md_theme_light_onPrimaryContainer">#3B002D</color>
+    <color name="md_theme_light_secondary">#795369</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#FFD8EC</color>
+    <color name="md_theme_light_onSecondaryContainer">#2F1124</color>
+    <color name="md_theme_light_tertiary">#8D4E2B</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#FFDBCB</color>
+    <color name="md_theme_light_onTertiaryContainer">#341100</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#FFFBFF</color>
+    <color name="md_theme_light_onBackground">#1F1A1C</color>
+    <color name="md_theme_light_surface">#FFFBFF</color>
+    <color name="md_theme_light_onSurface">#1F1A1C</color>
+    <color name="md_theme_light_surfaceVariant">#F0DEE5</color>
+    <color name="md_theme_light_onSurfaceVariant">#4F4349</color>
+    <color name="md_theme_light_outline">#81737A</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_inverseSurface">#342F31</color>
+    <color name="md_theme_light_inverseOnSurface">#F9EEF1</color>
+    <color name="md_theme_light_inversePrimary">#FFAEDE</color>
+    <color name="md_theme_dark_primary">#FFAEDE</color>
+    <color name="md_theme_dark_onPrimary">#60004A</color>
+    <color name="md_theme_dark_primaryContainer">#88006A</color>
+    <color name="md_theme_dark_onPrimaryContainer">#FFD8EC</color>
+    <color name="md_theme_dark_secondary">#E9B9D3</color>
+    <color name="md_theme_dark_onSecondary">#46263A</color>
+    <color name="md_theme_dark_secondaryContainer">#5F3C51</color>
+    <color name="md_theme_dark_onSecondaryContainer">#FFD8EC</color>
+    <color name="md_theme_dark_tertiary">#FFB692</color>
+    <color name="md_theme_dark_onTertiary">#542103</color>
+    <color name="md_theme_dark_tertiaryContainer">#703716</color>
+    <color name="md_theme_dark_onTertiaryContainer">#FFDBCB</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onErrorContainer">#FFB4AB</color>
+    <color name="md_theme_dark_background">#1F1A1C</color>
+    <color name="md_theme_dark_onBackground">#EAE0E3</color>
+    <color name="md_theme_dark_surface">#1F1A1C</color>
+    <color name="md_theme_dark_onSurface">#EAE0E3</color>
+    <color name="md_theme_dark_surfaceVariant">#4F4349</color>
+    <color name="md_theme_dark_onSurfaceVariant">#D3C2C9</color>
+    <color name="md_theme_dark_outline">#9C8D93</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_inverseSurface">#EAE0E3</color>
+    <color name="md_theme_dark_inverseOnSurface">#342F31</color>
+    <color name="md_theme_dark_inversePrimary">#A82485</color>
+    <color name="seed">#9C167B</color>
 </resources>
