--- a/app/src/main/res/layout/fragment_anime.xml
+++ b/app/src/main/res/layout/fragment_anime.xml
@@ -26,7 +26,7 @@
 
                 <include
                     android:id="@+id/contAnimeListTrend"
-                    layout="@layout/content_trending_anime_list"
+                    layout="@layout/content_anime_trending"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:visibility="gone"
@@ -53,7 +53,7 @@
 
                 <include
                     android:id="@+id/contAnimeList"
-                    layout="@layout/content_anime_list"
+                    layout="@layout/content_anime"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:visibility="gone"
