--- a/app/src/main/res/layout/content_anime.xml
+++ b/app/src/main/res/layout/content_anime.xml
@@ -28,6 +28,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvAnimeList"
-        tools:listitem="@layout/item_anime_list" />
+        tools:listitem="@layout/item_vertical" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
