--- a/app/src/main/res/layout/content_manga_trending.xml
+++ b/app/src/main/res/layout/content_manga_trending.xml
@@ -28,6 +28,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTrendingManga"
-        tools:listitem="@layout/item_anime_trending_list" />
+        tools:listitem="@layout/item_horizontal" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
