--- a/app/src/main/res/layout/item_paging_placeholder.xml
+++ b/app/src/main/res/layout/item_paging_placeholder.xml
@@ -1,25 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.facebook.shimmer.ShimmerFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/shimmerAnimeList"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     app:shimmer_auto_start="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-        <com.makeramen.roundedimageview.RoundedImageView
-            android:id="@+id/shOne"
-            android:layout_width="150dp"
-            android:layout_height="25dp"
-            android:layout_margin="8dp"
-            android:scaleType="fitXY"
-            android:src="@color/shimmer_grey"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:riv_corner_radius="16dp" />
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/shTwo"
@@ -30,7 +18,7 @@
             android:src="@color/shimmer_grey"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/shOne"
+            app:layout_constraintTop_toTopOf="parent"
             app:riv_corner_radius="16dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
