--- a/app/src/main/res/layout/content_anime.xml
+++ b/app/src/main/res/layout/content_anime.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
+        android:textColor="@color/text_color"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/nunito_black"
         android:text="Anime List"
