--- a/app/src/main/res/layout/content_manga.xml
+++ b/app/src/main/res/layout/content_manga.xml
@@ -9,6 +9,7 @@
     <TextView
         android:id="@+id/tvMangaList"
         android:layout_width="0dp"
+        android:textColor="@color/text_color"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
