--- a/app/src/main/res/layout/content_manga_trending.xml
+++ b/app/src/main/res/layout/content_manga_trending.xml
@@ -11,6 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:textColor="@color/text_color"
         android:fontFamily="@font/nunito_black"
         android:gravity="center_horizontal"
         android:text="Trending Manga"
