--- a/app/src/main/res/layout/item_vertical.xml
+++ b/app/src/main/res/layout/item_vertical.xml
@@ -56,6 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
+            android:textColor="@color/text_card_color"
             android:layout_marginEnd="8dp"
             android:ellipsize="marquee"
             android:fadingEdge="horizontal"
@@ -76,6 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:textColor="@color/text_card_color"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:fontFamily="@font/nunito_bold"
@@ -90,6 +92,7 @@
             android:id="@+id/textAnimeReleaseDate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:textColor="@color/text_card_color"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
@@ -105,6 +108,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:textColor="@color/text_card_color"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:fontFamily="@font/nunito_bold"
@@ -122,6 +126,7 @@
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:fontFamily="@font/nunito_bold"
+            android:textColor="@color/text_card_color"
             android:maxLines="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/textAnimeDuration"
@@ -135,6 +140,7 @@
             android:layout_marginBottom="8dp"
             android:background="@drawable/shadow_text"
             android:fontFamily="@font/nunito_black"
+            android:textColor="@color/text_card_color"
             android:paddingHorizontal="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/imageAnimePoster"
@@ -146,6 +152,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
+            android:textColor="@color/text_card_color"
             android:layout_marginBottom="8dp"
             android:background="@drawable/shadow_text"
             android:fontFamily="@font/nunito_black"
